tests/missing-semicol-after-expression.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected a ';' to denote the end of a statement.
// CHECK-NEXT: }
// CHECK-NEXT: ^

call: () -> void;

func: () -> void {
  call()
}
